# fastapi_base_service

./: .dockerignore  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_SPANISH.md  docker-compose.elk.yml  docker-compose.simple.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py  observability.py
app/clients/: external_client.py
app/middleware/: error_handler.py  request_tracing.py
app/models/: requests.py
app/services/: business_service.py
k8s/: README.md  elasticsearch.yml  fastapi-app.yml  kibana.yml  namespace.yml  otel-collector.yml  setup-minikube.sh
k8s/configs/logstash/pipeline/: elasticsearch-template.json  logstash.conf
k8s/configs/otel-collector/: config.yml
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_business_service.py  test_clients.py
