[project]
name = "fastapi-base-service"
version = "0.1.0"
description = "Base FastAPI microservice template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "dependency-injector>=4.41.0",
    # OpenTelemetry and observability
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
    "opentelemetry-instrumentation-requests>=0.42b0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation-logging>=0.42b0",
    "elasticsearch>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",  # For testing
    "ruff>=0.1.0",
    "pyrefly>=0.1.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


[tool.pyrefly]
project-includes = ["app/**/*.py", "tests/**/*.py"]
python-version = "3.12"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
exclude = [".git", "__pycache__", ".venv", "build", "dist"]

[tool.ruff.lint]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
